# endee

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  install.sh  run.sh
.github/workflows/: ci.yml  lint.yml
backend/: .env  Dockerfile  config.py  main.py  requirements.txt
backend/models/: schemas.py
backend/routers/: ask.py  complaints.py  search.py
backend/utils/: embeddings.py  llm.py  vector_store.py
data/: seed_complaints.py
docs/: backup-system.md  filter.md  getting-started.md  logs.md  mdbx-instrumentation.md  sparse.md
endee/: __init__.py  db.py
frontend/: .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  ErrorBoundary.tsx  index.css  main.tsx
frontend/src/components/: AddComplaint.module.css  AddComplaint.tsx  AskPanel.module.css  AskPanel.tsx  ComplaintCard.module.css  ComplaintCard.tsx  SearchPanel.module.css  SearchPanel.tsx  StatusBar.module.css  StatusBar.tsx
frontend/src/hooks/: useHealth.ts
frontend/src/utils/: api.ts
infra/: Dockerfile  README.md
src/: README.md  main.cpp
tests/: README.md  conftest.py  test_api.py
